examples/test/testpolicy1905.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1905
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key44: value12
      key8: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value1
          key17: value34
      podSelector:
        matchLabels:
          key32: value28
          key47: value34
          key27: value14
